logs/plush-web.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plush'...
Compiling './lib/python3.5/site-packages/plush/conf.py'...
***   File "./lib/python3.5/site-packages/plush/conf.py", line 125
    except KeyError, exc:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plush/request.py'...
***   File "./lib/python3.5/site-packages/plush/request.py", line 153
    except (ValueError, TypeError), message:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/plush/server.py'...
***   File "./lib/python3.5/site-packages/plush/server.py", line 32
    print '''\
 ______ _____   _______ _______ _______
|   __ \     |_|   |   |     __|   |   |
|    __/       |   |   |__     |       |
|___|  |_______|_______|_______|___|___|
'''
              
                                       
                                        
                                        
                                        
  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/plush/util'...
Listing './lib/python3.5/site-packages/plush/util/compat'...
Listing './lib/python3.5/site-packages/plush_web-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado-2.1.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
